--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/visitors-api:latest .
+          docker build -t ghcr.io/rayancfc/visitors-api:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/visitors-api:latest
+          docker push ghcr.io/rayancfc/visitors-api:latest
