--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,7 +1,9 @@
-name: Build and Push Image
+name: Build and Push Docker Image
+
 on:
   push:
     branches: ["main"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,18 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/rayancfc/visitors-api:latest .
 
-      - name: Push Docker image
+      - name: Log in and Push to GHCR
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-    docker push ghcr.io/rayancfc/visitors-api:latest
+          docker push ghcr.io/rayancfc/visitors-api:latest
