--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,5 +18,5 @@ jobs:
 
       - name: Log in and Push to GHCR
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u rayancfc --password-stdin
           docker push ghcr.io/rayancfc/visitors-api:latest
